--- a/Frontend/src/app/property/property-card/property-card.component.html
+++ b/Frontend/src/app/property/property-card/property-card.component.html
@@ -1,13 +1,21 @@
-<div class="row">
-  <div class="shadow-lg col-sm-3">
+
   <div class="card ">
     <div class="card-body p-1">
-      <img class="PropImg" src="assets/images/house_default.png">
-      <h1>{{Property.Name}}</h1>
-      <h1>{{Property.Type}}</h1>
-      <h1>{{Property.Price}}</h1>
-    </div>
-  </div>
-  </div>
+      <div class="card-img-wrapper">
+      <img class="card-img-top" src="assets/images/house_default.png">
+      <ul class="list-inline text-center member-icons animate">
+        <li class="list-inline-item">
+          <button class="btn-primary"><i class="fa-regular fa-pen-to-square"></i></button>
+        </li>
+        <li class="list-inline-item">
+          <button class="btn-primary"><i class="fa-solid fa-phone"></i></button>
+        </li>
+      </ul>
+      </div>
+      <h1>{{property.Name}}</h1>
+      <h2>{{property.Type}}</h2>
+      <h3>{{property.Price}}</h3>
 
-</div>
+    </div>
+ </div>
+
