--- a/Frontend/src/app/app.component.html
+++ b/Frontend/src/app/app.component.html
@@ -3,3 +3,11 @@
 
 <app-property-list></app-property-list>
 </div>
+<div class="text-center mt-4 text-secondary">
+  <p>
+      Property Listing Application
+  </p>
+  <p>
+      Copyright 2022-VSClue Solutions
+  </p>
+</div>
